@@ -100,26 +100,33 @@ else:
 
 words_to_test = [1 for i in range(0, len(words))]
 
+rand_str = ''
+switch_str = ''
 if RAND_FLAG in flags:
     random.shuffle(words)
+    rand_str = ' in random order'
 if SWITCH_FLAG in flags:
     word_indices = [1, 0]
+    switch_str = ' with languages switched'
 
-print('Questioning on {0} words from {1} files.' \
-      .format(len(words), file_count))
+print('Questioning on {0} words from {1} files{2}{3}.' \
+      .format(len(words), file_count, rand_str, switch_str))
 print('To exit, type \'{0}\'.'.format(QUIT_COMM))
 
 while run:
+    total_words_to_test = sum(words_to_test)
     for i in range(0, len(words)):
         if words_to_test[i] == 0:
             continue
         data = None
         hint_grade = 1
-        nailed_it = 0
+        nailed_it = 0  # 0 means that it was correct
         while data != words[i][word_indices[1]]:
             nailed_it += 1
             data = input('{0}> {1}: '.format(i + 1, words[i][word_indices[0]])).strip()
-            if data == HINT_COMM:
+            if len(data) == 0:
+                continue
+            elif data == HINT_COMM:
                 print('hint:', hintify(words[i][word_indices[1]], hint_grade))
                 hint_grade += 1
                 nailed_it += i
@@ -137,8 +144,11 @@ while run:
             words_to_test[i] = 0
     
     if sum(words_to_test) == 0:
+        if len(words_to_test) > 0:
+            print('Congratulations, you answered every word correctly!')
         run = False
     else:
+        print('You nailed {0} out of {1} words!'.format(total_words_to_test - sum(words_to_test), total_words_to_test))
         data = None
         while data != 'y':
             data = input('Do you want to repeat the most difficult words? (y/n) ').strip()
